@@ -175,7 +175,7 @@ typedef struct
     bool (*notUsed) (const char *reg, lineNode * currPl, lineNode * head);
     bool (*canAssign) (const char *op1, const char *op2, const char *op3);
     bool (*notUsedFrom) (const char *reg, const char *label, lineNode *head);
-    bool (*symmParmStack) (void);
+    bool (*symmParmStack) (const char *name);
     bool (*canJoinRegs) (const char **regs, char dst[20]);
     bool (*canSplitReg) (const char *reg, char dst[][16], int nDst);
   }
